# goldenquizz

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.nicegui/: storage-user-27f4dc0f-b124-43e3-9a03-7bc9853ea340.json  storage-user-d8853b7d-f353-462d-b409-e08376ba05e4.json  storage-user-e56408a1-90aa-4264-bc52-b30b21520627.json
config/: questions.yaml
goldenquizz/: game_engine.py  participant_session.py  server copy.py  server.py
goldenquizz/organizer/: organizer_final.py  organizer_prep.py  organizer_question.py  organizer_results.py
goldenquizz/participant/: participant_answer.py  participant_connect.py  participant_final.py  participant_question.py  participant_wait.py
goldenquizz/ui/: components.py  layouts.py  theme.py
