[project]
name = "goldenquizz"
version = "0.1.0"
description = "Quiz interactif - Soirée du VIP"
authors = [{ name = "Geoffroy Vaquette" }]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "nicegui>=3.2.0",
    "pyyaml>=6.0.3",
]

[tool.setuptools.packages.find]
include = ["goldenquizz"]
exclude = ["config"]